src/components/item-info/index.module.scss
@import '@styles/variables.scss';
@import '@styles/layout.scss';

.compact_container {
  display: flex;
  align-items: center;
  flex-direction: row;
  font-size: $font-body;
  justify-content: space-between;
  margin: 10px 0;
  word-break: normal;
  width: 100%;
  display: flex;

  .artist {
    width: 100%;
    //background-color: red;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

.container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 1em;
  margin-top: 30px;
  padding-top: 20px;
  padding-bottom: 20px;
  word-break: normal;
  width: 100%;
}

.spread {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: column;

  padding: 0 1em;

  width: 100%;

  @include respond-to('desktop') {
    flex-direction: row;
  }
}

.spread__inner {
  display: flex;
  flex-direction: row;

  align-items: center;
  justify-content: space-between;

  width: 100%;

  @include respond-to('desktop') {
    width: initial;
    justify-content: left;
  }
}

.editions {
  color: var(--gray-50);
}

.edition {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  font-size: 80%;

  .inline {
    display: flex;
    align-items: center;
  }
}

.issuer {
  @include respond-to('phone') {
    display: none;
  }

  @include respond-to('tablet') {
    display: block;
  }
}

span[data-tooltip].top {
  margin-left: 0.5em;

  &:before,
  &:after {
    transform: translate(-50%, 10px);
  }

  &:hover:after,
  &:hover:before {
    transform: translate(-50%, 0px);
  }
}

span[data-tooltip] {
  position: relative;

  &:after,
  &:before {
    position: absolute;
    visibility: hidden;
    opacity: 1;
    transition: transform 200ms ease, opacity 200ms;
    z-index: 100;
  }

  &:before {
    content: attr(data-tooltip);
    background-color: var(--text-color);
    color: var(--background-color);
    font-size: 12px;
    font-weight: bold;
    padding: 10px 15px;
    border-radius: 10px;
    white-space: nowrap;
    text-decoration: none;
    letter-spacing: 1px;
  }

  &:after {
    width: 0;
    height: 0;
    left: 50%;
    border: 6px solid transparent;
    content: '';
  }

  &:hover:after,
  &:hover:before {
    visibility: visible;
    opacity: 1;
    transform: translate(-50%, 0px);
  }
}

span[data-tooltip][data-position='top']:before {
  bottom: 100%;
  left: 50%;
}

span[data-tooltip][data-position='top']:after {
  border-top-color: var(--text-color);
  border-bottom: none;
  bottom: 101%;
  margin-bottom: 4px;
}

.objkt_label {
  padding-bottom: 7.5px;

  @include respond-to('desktop') {
    padding-bottom: 0;
    height: fit-content;
  }
}

.objkt_details_container {
  align-items: flex-start;

  @include respond-to('dekstop') {
    align-items: center;
  }
}
.objkt_label_container {
  width: 100%;
}

.collab_verification_title {
  padding-top: 0.5em;
  padding-bottom: 0.8em;
}
.collab_verification_symbol {
  padding-right: 0.5em;
}

.main_swap {
  display: flex;
  justify-content: flex-end;
  width: 100%;
}

.tz {
  font-size: 20px;
}

.infos_left,
.infos_right {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 1em;
}

